objects/Object_field_mapping__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Field_Mapping_Purpose__c</fullName>
        <label>Field Mapping Purpose</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Object_Field__c</fullName>
        <label>Source Object Field</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Object__c</fullName>
        <label>Source Object</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Object_Field__c</fullName>
        <label>Target Object Field</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Object__c</fullName>
        <label>Target Object</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Object field mapping</label>
</CustomObject>